tests/cases_invalid/fns/recursion/.expected
error: function `level3_recursive()` defined recursively
  --> ./cases_invalid/fns/recursion/main.shd:5:4
   |
 2 |     level2_recursive();
   |     ------------------ info: `level2_recursive()` function called in `level1_recursive()` function
 3 | }
 4 |
 5 | fn level3_recursive() {
   |    ^^^^^^^^^^^^^^^^ recursive function `level3_recursive()` defined here
 6 |     level4_recursive();
   |     ------------------ info: `level4_recursive()` function called in `level3_recursive()` function
 7 | }
 8 |
 9 | fn level4_recursive() {
10 |     level1_recursive();
   |     ------------------ info: `level1_recursive()` function called in `level4_recursive()` function
11 | }
12 |
13 | fn level2_recursive() {
14 |     level3_recursive();
   |     ------------------ info: `level3_recursive()` function called in `level2_recursive()` function
   |

error: function `inner_recursive()` defined recursively
  --> ./cases_invalid/fns/recursion/main.shd:17:4
   |
17 | fn inner_recursive() {
   |    ^^^^^^^^^^^^^^^ recursive function `inner_recursive()` defined here
18 |     inner_recursive();
   |     ----------------- info: `inner_recursive()` function called in `inner_recursive()` function
   |

error: function `inner_returned_recursive(i32)` defined recursively
  --> ./cases_invalid/fns/recursion/main.shd:21:4
   |
21 | fn inner_returned_recursive(a: ref i32) -> i32 {
   |    ^^^^^^^^^^^^^^^^^^^^^^^^ recursive function `inner_returned_recursive(i32)` defined here
22 |     return inner_returned_recursive(a);
   |            --------------------------- info: `inner_returned_recursive(i32)` function called in `inner_returned_recursive(i32)` function
   |

error: function `generic_recursive<...>()` defined recursively
  --> ./cases_invalid/fns/recursion/main.shd:25:4
   |
25 | fn generic_recursive<C: i32>() {
   |    ^^^^^^^^^^^^^^^^^ recursive function `generic_recursive<...>()` defined here
26 |     generic_recursive<2>();
   |     ---------------------- info: `generic_recursive<...>()` function called in `generic_recursive<...>()` function
   |

error: function `recursive_left_value(i32)` defined recursively
  --> ./cases_invalid/fns/recursion/main.shd:29:4
   |
29 | fn recursive_left_value(a: i32) -> ref i32 {
   |    ^^^^^^^^^^^^^^^^^^^^ recursive function `recursive_left_value(i32)` defined here
30 |     recursive_left_value(1) = 2;
   |     ----------------------- info: `recursive_left_value(i32)` function called in `recursive_left_value(i32)` function
   |
